Bug 1965664 - Fix some crashes in ContentSubtreeIterator r=jjaschke,dom-core

by skipping the shadow hosts that ShadowDOM selection doesn't
support at the moment.

Differential Revision: https://phabricator.services.mozilla.com/D248917