dom/base/RangeUtils.cpp
@@ -365,7 +365,9 @@ nsINode* ShadowDOMSelectionHelpers::GetParentNodeInSameSelection(
   if (StaticPrefs::dom_shadowdom_selection_across_boundary_enabled() &&
       aAllowCrossShadowBoundary == AllowRangeCrossShadowBoundary::Yes) {
     if (aNode.IsContent()) {
-      if (HTMLSlotElement* slot = aNode.AsContent()->GetAssignedSlot()) {
+      if (HTMLSlotElement* slot = aNode.AsContent()->GetAssignedSlot();
+          slot && GetShadowRoot(slot->GetContainingShadowHost(),
+                                aAllowCrossShadowBoundary)) {
         return slot;
       }
     }
